# src-sam-carrier

./: Cargo.toml  README.md
body-control/: Cargo.toml  config.json
body-control/src/: center.rs  cephalothorax.rs  gait.rs  main.rs  server.rs  servo.rs
csci-body-control/: Cargo.toml  config.json  gait-a.json
csci-body-control/src/: cephalothorax.rs  gait.rs  server.rs
csci-common/: Cargo.toml
csci-common/src/: lib.rs
csci-test/: Cargo.toml
csci-test/src/: main.rs
scripts/: create_service.sh  setup_host.sh  setup_target.sh
test-app/: Cargo.toml
