[package]
name = "body-control"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "center"
path = "src/center.rs"

[[bin]]
name = "server"
path = "src/server.rs"


[dependencies]
nalgebra = "0.27"
linux-embedded-hal = "0.3"
pwm-pca9685 = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nng = "1.0"